# waves

./: .gitignore  CMakeLists.txt  Makefile  todo.md  waves.sln  waves.vcxproj
src/: CMakeLists.txt  collidable.cpp  collidable.hpp  collisionsystem.cpp  collisionsystem.hpp  game.cpp  game.hpp  gameobject.cpp  gameobject.hpp  graphics.cpp  graphics.hpp  gravity.cpp  gravity.hpp  main.cpp  physicsbody.cpp  physicsbody.hpp  platform.cpp  platform.hpp  prelude.hpp  rect.hpp  rock.cpp  rock.hpp  sea.cpp  sea.hpp  ship.cpp  ship.hpp  utils.cpp  utils.hpp  visitor.cpp  visitor.hpp  wave.cpp  wave.hpp
